fix(reaction): css fix for reaction count alignment

--- a/src/components/ReactionBadge/ReactionBadge.style.scss
+++ b/src/components/ReactionBadge/ReactionBadge.style.scss
@@ -11,6 +11,7 @@
   color: var(--reaction-badge-primary-unreacted-text);
 
   .reaction-badge-count {
+    height: 1rem;
     margin-left: 0.25rem;
   }
 
